--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.22'
+      - run: go mod tidy
       - run: go build -v ./cmd/texweave
       - run: go test -v ./...
