feat: add Docker and Kubernetes, reorganize layout
Docker:
- Dockerfile (multi-stage), .dockerignore, docker-compose.yml
- GitHub Actions: build and push to ghcr.io/ali-m07/texweave

Kubernetes:
- deploy/kubernetes/: Job, ConfigMap, secret.example
- deploy/README.md

Layout:
- deploy/k8s/ -> deploy/kubernetes/
- docs: PACKAGE.md -> package.md, PUSH.md -> push.md (lowercase)
- docs/README.md index
- README: Docker/K8s sections, project structure updated

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ go.work
 .env.local
 *.env
 
+# Kubernetes secret (copy from secret.example.yaml, do not commit)
+deploy/kubernetes/secret.yaml
+
 # OS
 .DS_Store
 Thumbs.db
